[tool.poetry]
name = "ajents"
version = "0.0.1"
description = "RL agents in JAX"
authors = ["Onno Eberhard <onnoeberhard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flax = "^0.4.1"
rlax = "^0.1.2"

[tool.poetry.dev-dependencies]
gym = "^0.23.1"
ipython = "^8.2.0"
pygame = "^2.1.2"
pytest = "^7.1.2"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
tqdm = "^4.64.0"
snakeviz = "^2.1.1"
tensorflow = {version = "^2.8.0", python = ">=3.8,<3.11"}
tbp-nightly = "^2.9.0-alpha.20220413"

[tool.pytest.ini_options]
filterwarnings = [
    # "ignore:.*imp module:DeprecationWarning"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
