[tool.poetry]
name = "ajents"
version = "0.0.1"
description = "RL agents in JAX"
authors = ["Onno Eberhard <onnoeberhard@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tqdm = "^4.64.0"
jax = "^0.3.16"
jaxlib = "^0.3.15"

[tool.poetry.dev-dependencies]
gym = "^0.23.1"
ipython = "^8.2.0"
pygame = "^2.1.2"
pytest = "^7.1.2"
ipdb = "^0.13.9"
pdbpp = "^0.10.3"
# snakeviz = "^2.1.1"
# tensorflow = "^2.6.0"
# tbp-nightly = "^2.9.0-alpha.20220413"
# dm-control = "^1.0.2"
pylint = "^2.13.8"
click = "^8.1.3"
# matplotlib = "^3.5.2"
# jupyter = "^1.0.0"
# oscillator-gym = "^1.0.0"

[tool.pytest.ini_options]
filterwarnings = [
    # "ignore:.*imp module:DeprecationWarning"
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "protected-access",
    "invalid-name",
    "redefined-outer-name"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
