[tool.poetry]
name = "ajents"
version = "0.0.2a"
description = "RL agents in JAX"
authors = ["Onno Eberhard <onnoeberhard@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tqdm = "*"
jax = "*"
jaxlib = "*"
optax = "*"
rich = "*"
flax = "*"
distrax = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"
pdbpp = "*"
gymnasium = {extras = ["classic-control"], version = "*"}
jupyter = "*"
oetils = "*"
matplotlib = "*"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "protected-access",
    "invalid-name",
    "redefined-outer-name",
    "attribute-defined-outside-init",
    "invalid-field-call",
    "not-a-mapping",
    "not-an-iterable"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
